; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_dmu_object.c_dmu_object_rm_spill.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_dmu_object.c_dmu_object_rm_spill.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32, %struct.TYPE_7__* }
%struct.TYPE_7__ = type { i32 }

@DNODE_MUST_BE_ALLOCATED = common dso_local global i32 0, align 4
@FTAG = common dso_local global i32 0, align 4
@RW_WRITER = common dso_local global i32 0, align 4
@DNODE_FLAG_SPILL_BLKPTR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dmu_object_rm_spill(i32* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_8__*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* @DNODE_MUST_BE_ALLOCATED, align 4
  %13 = load i32, i32* @FTAG, align 4
  %14 = call i32 @dnode_hold_impl(i32* %10, i32 %11, i32 %12, i32 0, i32 %13, %struct.TYPE_8__** %8)
  store i32 %14, i32* %9, align 4
  %15 = load i32, i32* %9, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %3
  %18 = load i32, i32* %9, align 4
  store i32 %18, i32* %4, align 4
  br label %47

19:                                               ; preds = %3
  %20 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %21 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %20, i32 0, i32 0
  %22 = load i32, i32* @RW_WRITER, align 4
  %23 = call i32 @rw_enter(i32* %21, i32 %22)
  %24 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %25 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %24, i32 0, i32 1
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* @DNODE_FLAG_SPILL_BLKPTR, align 4
  %30 = and i32 %28, %29
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %39

32:                                               ; preds = %19
  %33 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %34 = load i32*, i32** %7, align 8
  %35 = call i32 @dbuf_rm_spill(%struct.TYPE_8__* %33, i32* %34)
  %36 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %37 = load i32*, i32** %7, align 8
  %38 = call i32 @dnode_rm_spill(%struct.TYPE_8__* %36, i32* %37)
  br label %39

39:                                               ; preds = %32, %19
  %40 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %41 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %40, i32 0, i32 0
  %42 = call i32 @rw_exit(i32* %41)
  %43 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %44 = load i32, i32* @FTAG, align 4
  %45 = call i32 @dnode_rele(%struct.TYPE_8__* %43, i32 %44)
  %46 = load i32, i32* %9, align 4
  store i32 %46, i32* %4, align 4
  br label %47

47:                                               ; preds = %39, %17
  %48 = load i32, i32* %4, align 4
  ret i32 %48
}

declare dso_local i32 @dnode_hold_impl(i32*, i32, i32, i32, i32, %struct.TYPE_8__**) #1

declare dso_local i32 @rw_enter(i32*, i32) #1

declare dso_local i32 @dbuf_rm_spill(%struct.TYPE_8__*, i32*) #1

declare dso_local i32 @dnode_rm_spill(%struct.TYPE_8__*, i32*) #1

declare dso_local i32 @rw_exit(i32*) #1

declare dso_local i32 @dnode_rele(%struct.TYPE_8__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
